--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!doctype html>
+﻿﻿@using System.Security.Claims
+
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -6,9 +8,11 @@
     <meta charset="utf-8" />
     <title>İş Emirleri Takip Yazılımı</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+
     <!-- App favicon -->
     <link rel="shortcut icon" href="~/assets/images/favicon.ico">
+
+
 
     <!-- Bootstrap Css -->
     <link href="~/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
@@ -16,7 +20,7 @@
     <link href="~/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
     <!-- App Css-->
     <link href="~/assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
-    @await RenderSectionAsync("Styles", true);
+    @await RenderSectionAsync("Styles", false);
 
 </head>
 
@@ -273,18 +277,15 @@
                     <div class="dropdown d-inline-block">
                         <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="rounded-circle header-profile-user" src="~/assets/images/users/avatar-4.jpg"
+                            <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-4.jpg"
                                  alt="Header Avatar">
-                            <span class="d-none d-xl-inline-block ms-1 fw-medium font-size-15">Marcus</span>
+                            <span class="d-none d-xl-inline-block ms-1 fw-medium font-size-15">@User.FindFirst(ClaimTypes.Email).Value</span>
                             <i class="uil-angle-down d-none d-xl-inline-block font-size-15"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-end">
                             <!-- item-->
-                            <a class="dropdown-item" href="#"><i class="uil uil-user-circle font-size-18 align-middle text-muted me-1"></i> <span class="align-middle">View Profile</span></a>
-                            <a class="dropdown-item" href="#"><i class="uil uil-wallet font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">My Wallet</span></a>
-                            <a class="dropdown-item d-block" href="#"><i class="uil uil-cog font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Settings</span> <span class="badge bg-success-subtle text-success rounded-pill mt-1 ms-2">03</span></a>
-                            <a class="dropdown-item" href="#"><i class="uil uil-lock-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Lock screen</span></a>
-                            <a class="dropdown-item" href="#"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Sign out</span></a>
+
+                            <a class="dropdown-item" asp-controller="User" asp-action="Logout"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Çıkış Yap</span></a>
                         </div>
                     </div>
 
@@ -339,9 +340,15 @@
                                 <span>Müşteriler</span>
                             </a>
                         </li>
-
-                      
-
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li>
+                                <a asp-action="Index" asp-controller="User">
+                                    <i class="uil-home-alt"></i>
+                                    <span>Kullanıcılar</span>
+                                </a>
+                            </li>
+                        }
                         <li>
                             <a href="javascript: void(0);" class="has-arrow waves-effect">
                                 <i class="uil-location-point"></i>
@@ -350,11 +357,11 @@
                             <ul class="sub-menu" aria-expanded="false">
                                 <li><a href="maps-google.html">Öncelikler</a></li>
                                 <li><a href="maps-vector.html">Durumlar</a></li>
-                               
+
                             </ul>
                         </li>
 
-                 
+
                     </ul>
                 </div>
                 <!-- Sidebar -->
@@ -369,7 +376,7 @@
             <div class="page-content">
                 <div class="container-fluid">
 
-                   @RenderBody()
+                    @RenderBody()
 
                 </div> <!-- container-fluid -->
             </div>
@@ -395,8 +402,6 @@
 
     </div>
     <!-- END layout-wrapper -->
-   
-
     <!-- JAVASCRIPT -->
     <script src="~/assets/libs/jquery/jquery.min.js"></script>
     <script src="~/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -406,10 +411,31 @@
     <script src="~/assets/libs/waypoints/lib/jquery.waypoints.min.js"></script>
     <script src="~/assets/libs/jquery.counterup/jquery.counterup.min.js"></script>
 
+    <!-- Required datatable js -->
+    <script src="~/assets/libs/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="~/assets/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <!-- Buttons examples -->
+    <script src="~/assets/libs/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="~/assets/libs/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+    <script src="~/assets/libs/jszip/jszip.min.js"></script>
+    <script src="~/assets/libs/pdfmake/build/pdfmake.min.js"></script>
+    <script src="~/assets/libs/pdfmake/build/vfs_fonts.js"></script>
+    <script src="~/assets/libs/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="~/assets/libs/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="~/assets/libs/datatables.net-buttons/js/buttons.colVis.min.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
+    <!-- Responsive examples -->
+    <script src="~/assets/libs/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="~/assets/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
+
+
+
+
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
 
-    @await RenderSectionAsync("Scripts",false);
+    @await RenderSectionAsync("Scripts", false);
 
 </body>
 </html>
