layout kısmı tamamlandı ekleme işlemi gerçekleşti

--- a/IsEmirleri.Web/Views/User/Index.cshtml
+++ b/IsEmirleri.Web/Views/User/Index.cshtml
@@ -104,6 +104,7 @@
                     { data: 'id', title: 'Sıra No' },
                     { data: 'email', title: 'Kullanıcı Maili' },
                     { data: 'password', title: 'Kullanıcı Şifre' },
+                    { data: 'customerId', title: 'Customer Id' },
                     {
                         data: 'tasks', title: 'Task Sayısı', render: (data) => {
                             return data.length;
