--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -273,7 +273,7 @@
                             </div>
                         </div>
                     </div>
-@*                     <div class="dropdown d-inline-block">
+                     <div class="dropdown d-inline-block">
                         <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-4.jpg"
@@ -286,7 +286,7 @@
 
                             <a class="dropdown-item" asp-controller="User" asp-action="Logout"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Çıkış Yap</span></a>
                         </div>
-                    </div> *@
+                    </div> 
 
                     <div class="dropdown d-inline-block">
                         <button type="button" class="btn header-item noti-icon right-bar-toggle waves-effect">
@@ -339,7 +339,7 @@
                                 <span>Müşteriler</span>
                             </a>
                         </li>
-                      @*   @if (User.IsInRole("Admin"))
+                         @if (User.IsInRole("Admin"))
                         {
                             <li>
                                 <a asp-action="Index" asp-controller="User">
@@ -347,7 +347,7 @@
                                     <span>Kullanıcılar</span>
                                 </a>
                             </li>
-                        } *@
+                        } 
                         <li>
                             <a href="javascript: void(0);" class="has-arrow waves-effect">
                                 <i class="uil-location-point"></i>
