--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -274,14 +274,14 @@
                         </div>
                     </div>
 
-                  @*   <div class="dropdown d-inline-block">
-                        <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
-                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-4.jpg"
-                                 alt="Header Avatar">
-                            <span class="d-none d-xl-inline-block ms-1 fw-medium font-size-15">@User.FindFirst(ClaimTypes.Email).Value</span>
-                            <i class="uil-angle-down d-none d-xl-inline-block font-size-15"></i>
-                        </button>
+                    @*   <div class="dropdown d-inline-block">
+                    <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
+                    data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-4.jpg"
+                    alt="Header Avatar">
+                    <span class="d-none d-xl-inline-block ms-1 fw-medium font-size-15">@User.FindFirst(ClaimTypes.Email).Value</span>
+                    <i class="uil-angle-down d-none d-xl-inline-block font-size-15"></i>
+                    </button>
                     </div> *@
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
@@ -357,10 +357,15 @@
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a href="maps-google.html">Öncelikler</a></li>
-                            <li><a href="maps-vector.html">Durumlar</a></li>
+                            @if (User.IsInRole("Admin, Superadmin"))
+                            {
+                                <li><a href="@Url.Action("Index","Status")">Durumlar</a></li>
+
+                            }
 
                         </ul>
                     </li>
+
 
 
                 </ul>
