task sayısını görüntülüme eklendi

--- a/IsEmirleri.Web/Views/Status/Index.cshtml
+++ b/IsEmirleri.Web/Views/Status/Index.cshtml
@@ -97,7 +97,7 @@
                     { data: 'name', title: 'Durum Adı' },
 
                     //------------------------------------------------------------------------------------------------------------------------------------------------------
-                    { data: 'name', title: 'Bağlı Görev Sayısı' },
+                    { data: 'taskCount', title: 'Bağlı Görev Sayısı' },
 
 
                     {
