--- a/IsEmirleri.Web/Views/Home/Index.cshtml
+++ b/IsEmirleri.Web/Views/Home/Index.cshtml
@@ -14,4 +14,9 @@
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
+@section Scripts{
+    <script>
+        toastr.success("İşlem Başarılı", "Kullanıcı Silindi !");
 
+    </script>
+}
