--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
     <link rel="shortcut icon" href="~/assets/images/favicon.ico">
 
 
-
+    <link rel="stylesheet" type="text/css" href="~/assets/libs/toastr/build/toastr.min.css">
+    <link href="~/assets/libs/sweetalert2/sweetalert2.min.css" rel="stylesheet" type="text/css" />
     <!-- Bootstrap Css -->
     <link href="~/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
     <!-- Icons Css -->
@@ -273,7 +274,7 @@
                             </div>
                         </div>
                     </div>
-                     <div class="dropdown d-inline-block">
+                    <div class="dropdown d-inline-block">
                         <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img class="rounded-circle header-profile-user" src="assets/images/users/avatar-4.jpg"
@@ -286,7 +287,7 @@
 
                             <a class="dropdown-item" asp-controller="User" asp-action="Logout"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Çıkış Yap</span></a>
                         </div>
-                    </div> 
+                    </div>
 
                     <div class="dropdown d-inline-block">
                         <button type="button" class="btn header-item noti-icon right-bar-toggle waves-effect">
@@ -339,7 +340,7 @@
                                 <span>Müşteriler</span>
                             </a>
                         </li>
-                         @if (User.IsInRole("Admin"))
+                        @if (User.IsInRole("Admin"))
                         {
                             <li>
                                 <a asp-action="Index" asp-controller="User">
@@ -347,7 +348,7 @@
                                     <span>Kullanıcılar</span>
                                 </a>
                             </li>
-                        } 
+                        }
                         <li>
                             <a href="javascript: void(0);" class="has-arrow waves-effect">
                                 <i class="uil-location-point"></i>
@@ -379,38 +380,38 @@
                     <div class="row">
                         <div class="col-12">
 
-                             @RenderBody()
-                    </<div>
-
-                    </div>
-                    </div>
-                </div> <!-- container-fluid -->
-            </div>
-            <!-- End Page-content -->
-
-
-            <footer class="footer">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <script>document.write(new Date().getFullYear())</script> © Minible.
+                            @RenderBody()
+                     
+                            </div>
                         </div>
-                        <div class="col-sm-6">
-                            <div class="text-sm-end d-none d-sm-block">
-                                Crafted with <i class="mdi mdi-heart text-danger"></i> by <a href="https://themesbrand.com/" target="_blank" class="text-reset">Themesbrand</a>
+                    </div> <!-- container-fluid -->
+                </div>
+                <!-- End Page-content -->
+
+
+                <footer class="footer">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <script>document.write(new Date().getFullYear())</script> © Minible.
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="text-sm-end d-none d-sm-block">
+                                    Crafted with <i class="mdi mdi-heart text-danger"></i> by <a href="https://themesbrand.com/" target="_blank" class="text-reset">Themesbrand</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </footer>
+                </footer>
+            </div>
+            <!-- end main content-->
         </div>
-        <!-- end main content-->
-    </div>
-    <!-- END layout-wrapper -->
-    <partial name="_PluginsPartial.cshtml" />
+        <!-- END layout-wrapper -->
 
-    @await RenderSectionAsync("Scripts", false);
 
 </body>
 </html>
 
+<partial name="_PluginsPartial.cshtml" />
+
+@await RenderSectionAsync("Scripts", false);
