--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -334,12 +334,15 @@
                     <ul class="metismenu list-unstyled" id="side-menu">
                         <li class="menu-title">Menu</li>
 
-                        <li>
-                            <a href="index.html">
-                                <i class="uil-home-alt"></i>
-                                <span>Müşteriler</span>
-                            </a>
-                        </li>
+                        @if (User.IsInRole("SuperAdmin"))
+                        {
+                            <li>
+                                <a class="now-link text-dark" asp-controller="Customer" asp-action="index">
+                                    <i class="uil-home-alt"></i>
+                                    <span>Müşteriler</span>
+                                </a>
+                            </li>
+                        }
                         @if (User.IsInRole("Admin"))
                         {
                             <li>
