--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -334,7 +334,7 @@
                     <ul class="metismenu list-unstyled" id="side-menu">
                         <li class="menu-title">Menu</li>
 
-                        @if (User.IsInRole("SuperAdmin"))
+                        @if (User.IsInRole("Superadmin"))
                         {
                             <li>
                                 <a class="now-link text-dark" asp-controller="Customer" asp-action="index">
