toastr kullanıldı. limit kontrol gerçekleşti

--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -344,7 +344,7 @@
                         {
                             <li>
                                 <a asp-action="Index" asp-controller="User">
-                                    <i class="uil-home-alt"></i>
+                                    <i class="fas fa-user-friends"></i>
                                     <span>Kullanıcılar</span>
                                 </a>
                             </li>
