Şifremi unuttum sayfasına yönlendirme yapıldı. Random password oluşuturldu.

--- a/IsEmirleri.Web/Views/User/Login.cshtml
+++ b/IsEmirleri.Web/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@using IsEmirleri.Models
+﻿
 @model AppUser
 
 
@@ -71,6 +71,10 @@
                                     <input type="submit" name="submit" value="Giriş Yap">
                                 </div>
                                 
+                                <div class="field padding-bottom--24">
+                                    <a asp-action="Password" asp-controller="User">Şifremi Unuttum</a>
+                                </div>
+
                             </form>
                         </div>
                     </div>
