--- a/IsEmirleri.Web/Views/_ViewImports.cshtml
+++ b/IsEmirleri.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using IsEmirleri.Web
 @using IsEmirleri.Web.Models
+@using IsEmirleri.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
