profile sayfası ve giriş yapan kullanıcının bilgilerinin getirilmesi yapıldı ön yüz tasaralndı

--- a/IsEmirleri.Web/Views/Shared/_Layout.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_Layout.cshtml
@@ -286,6 +286,7 @@
                             <!-- item-->
 
                             <a class="dropdown-item" asp-controller="User" asp-action="Logout"><i class="uil uil-sign-out-alt font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Çıkış Yap</span></a>
+                            <a class="dropdown-item" asp-controller="User" asp-action="Profile"><i class="fas fa-user-circle font-size-18 align-middle me-1 text-muted"></i> <span class="align-middle">Profile</span></a>
                         </div>
                     </div>
 
