--- a/IsEmirleri.Web/Views/User/Profile.cshtml
+++ b/IsEmirleri.Web/Views/User/Profile.cshtml
@@ -1,5 +1,4 @@
 ﻿@model AppUser
-
 <div>
     <div class="card">
         <div class="card-body">
@@ -10,7 +9,7 @@
                     </a>
 
                     <div class="dropdown-menu dropdown-menu-end" style="">
-                        <a class="dropdown-item" href="#">Sil</a>
+                        <a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#profileEditModal">Düzenle</a>
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -29,6 +28,42 @@
                         <p class="mb-1">Şifre :</p>
                         <h5 class="font-size-16">@Model.Password</h5>
                     </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Profil Düzenleme Modal -->
+    <div class="modal fade" id="profileEditModal" tabindex="-1" aria-labelledby="profileEditModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-primary bg-gradient text-white">
+                    <h5 class="modal-title" id="profileEditModalLabel">Profil Düzenleme</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" asp-action="UpdateProfile" enctype="multipart/form-data">
+                        <div class="text-center mb-3">
+                            <img src="/Files/UserPhotos/@Model.Picture" style="width:150px; height:150px;border-radius:50%" />
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="Picture">Fotoğraf Güncellemek için Yeni Fotoğraf Seçin</label>
+                            <input asp-for="Picture" type="file" class="form-control" />
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="Email" class="form-label">Email Adresiniz</label>
+                            <input asp-for="Email" class="form-control" readonly  />
+                        </div>
+                        <input asp-for="Id" hidden />
+                        <div class="mb-3">
+                            <label asp-for="Password" class="form-label">Kullanıcı Şifreniz</label>
+                            <input asp-for="Password" class="form-control" value="@Model.Password"  />
+                        </div>
+                        <div class="mb-3 text-end">
+                            <button type="submit" class="btn btn-success">Kaydet</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
