--- a/IsEmirleri.Web/Views/User/Profile.cshtml
+++ b/IsEmirleri.Web/Views/User/Profile.cshtml
@@ -14,7 +14,7 @@
                 </div>
                 <div class="clearfix"></div>
                 <div>
-                    <img src="@Model.Picture" alt="" class="avatar-lg rounded-circle img-thumbnail">
+                    <img src="/Files/UserPhotos/@Model.Picture" style="width:150px; height:150px;border-radius:50%" />
                 </div>
                 <h5 class="mt-3 mb-1">@Model.Email</h5>
 
@@ -56,6 +56,7 @@
                             <input asp-for="Email" class="form-control" readonly  />
                         </div>
                         <input asp-for="Id" hidden />
+                        <input asp-for="UserTypeId" hidden />
                         <div class="mb-3">
                             <label asp-for="Password" class="form-label">Kullanıcı Şifreniz</label>
                             <input asp-for="Password" class="form-control" value="@Model.Password"  />
