--- a/IsEmirleri.Web/Views/Customer/Index.cshtml
+++ b/IsEmirleri.Web/Views/Customer/Index.cshtml
@@ -61,7 +61,7 @@
                     { data: 'userLimit', title: 'Kullanıcı Limiti' },
                     {
                         data: 'id', title: 'İşlemler', render: (data) => {
-                            return `<a title="Sil" onclick="deleteCustomer(${data},this)" class="btn uil-trash-alt fs-6 btn-danger"></a> <a onclick="updateCustomer(${data},this)" title="Düzenle" class="btn uil-pen fs-6 btn-success"></a>`
+                            return `<a title="Sil" onclick="deleteCustomer(${data},this)" class="btn uil-trash-alt fs-6 btn-danger"></a> <a onclick="updateCustomer(${data},this)" title="Düzenle" class="btn uil-pen fs-6 btn-success"></a>   <a onclick="getUsers(${data})" title="Kullanıcıları Görüntüle" class="btn uil-users-alt fs-6 btn-info"></a>`
                         }
                     }
                 ]
@@ -163,5 +163,9 @@
                     }
                 });
             }
+
+        function getUsers(customerId) {
+            location.href = '/Customer/GetAllUsersById?customerId=' + customerId;
+        }
     </script>
 }
