--- a/IsEmirleri.Web/Views/Shared/_PluginsPartial.cshtml
+++ b/IsEmirleri.Web/Views/Shared/_PluginsPartial.cshtml
@@ -20,6 +20,7 @@
 <script src="~/assets/libs/datatables.net-buttons/js/buttons.html5.min.js"></script>
 <script src="~/assets/libs/datatables.net-buttons/js/buttons.print.min.js"></script>
 <script src="~/assets/libs/datatables.net-buttons/js/buttons.colVis.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
 <!-- Responsive examples -->
