customer a ait kullanıcı ekleme,silme,limit kontrol, gerekli sayfa düzenlemeleri yapıldı.

--- a/IsEmirleri.Web/Views/User/Index.cshtml
+++ b/IsEmirleri.Web/Views/User/Index.cshtml
@@ -112,7 +112,7 @@
                 });
             });
 
-            window.deleteUser = function (userId, button) {
+            deleteUser = function (userId, button) {
                 Swal.fire({
                     title: "Silmek İstediğinize Emin Misiniz?",
                     text: "Bu işlem geri alınamayacaktır.",
