--- a/IsEmirleri.Web/Views/Customer/GetAllUsersById.cshtml
+++ b/IsEmirleri.Web/Views/Customer/GetAllUsersById.cshtml
@@ -1,21 +1,50 @@
-﻿<div class="row">
+﻿@{
+    int count = 0;
+}
+
+<div class="row">
     <div class="col-12">
         <div class="card">
-            <div class="card-header">
-                <div class="col-11 text-center fs-3 text-dark">Kullanıcılar</div>
+            <div class="card-header bg-soft-success text-dark text-center d-flex">
+                <div class="col-10 text-center fs-3 text-dark">
+                    <i class="uil-chat-bubble-user"></i>Kullanıcı Listesi
+                </div>
+                <div class="col-2 fs-3">
+                    <button id="btnAdd" class="btn btn-success"><i class="uil uil-plus me-2"></i>Yeni Kayıt</button>
+                </div>
             </div>
-
-            <div class="col-12 fs-3 text-end">
-                <a href="#" id="btnAdd" class="btn btn-success ">Yeni Kayıt</a>
-            </div>
-
             <div class="card-body">
                 <table id="tblUsers" class="table table-bordered table-striped table-hover">
-                    <thead>
-                        
-                    </thead>
-                    <tbody></tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="modalAdd" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3 row">
+                    <input type="text" class="form-control" id="txtEmail" placeholder="Kullanıcı maili giriniz">
+                </div>
+                <div class="mb-3 row">
+                    <input type="text" class="form-control" id="txtPassword" placeholder="Kullanıcı şifre giriniz">
+                </div>
+                <div class="mb-3 row">
+                    <label class="form-label">Kullanıcı Tipi</label>
+                    <select class="form-select" id="ddlUserType">
+                    </select>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                <button type="button" id="btnSave" class="btn btn-primary">Kaydet</button>
             </div>
         </div>
     </div>
@@ -23,35 +52,52 @@
 
 @section Scripts {
     <script>
+        var DataTable = "";
         $(document).ready(() => {
             var customerId = sessionStorage.getItem('customerId');
             if (customerId) {
-                
+
                 $.ajax({
                     url: '/Customer/GetAllUsersById',
                     type: 'POST',
                     data: { customerId: customerId },
                     success: (response) => {
-                        
+
                         var table = $('#tblUsers').DataTable({
                             data: response.data,
                             columns: [
-                                { data: 'picture', title: 'Fotoğraf' },
+                                {
+                                    data: 'picture', title: 'Fotoğraf', render: function (data) {
+                                        return `<img src="/Files/UserPhotos/${data}" style="width:50px; height:50px;border-radius:50%" />`;
+                                    }
+                                },
                                 { data: 'id', title: 'ID' },
                                 { data: 'email', title: 'Email' },
-                                {data: 'isDeleted', title: 'Aktif/Pasif', render: function (data) {
+                                {
+                                    data: 'userTypeId', title: 'Kullanıcı Tipi', render: function (data) {
+                                        if (data==2) {
+                                            return `<i class="badge bg-info-subtle text-info font-size-12">Müşteri</i>`;
+                                        }
+                                        else if (data==3) {
+                                            return `<i class="badge bg-warning-subtle text-warning font-size-12">Kullanıcı</i>`;
+                                        }
+
+                                    }
+                                },
+                                {
+                                    data: 'isDeleted', title: 'Aktif/Pasif', render: function (data) {
 
 
                                         return data ? `<i class="badge bg-danger-subtle text-danger font-size-12">Pasif</i >` : `<i class="badge bg-success-subtle text-success font-size-12" >Aktif</i>`
-                              }
-                            },
+                                    }
+                                },
 
                                 {
                                     data: 'id', title: 'İşlemler', render: (data) => {
-                                        return `<a title="Sil" onclick="deleteCustomer(${data},this)" class="btn uil-trash-alt fs-6 btn-danger"></a> <a onclick="updateCustomer(${data},this)" title="Düzenle" class="btn uil-pen fs-6 btn-success"></a>`
+                                        return `<a title="Sil" onclick="deleteCustomer(${data},this)" class="btn uil-trash-alt fs-6 btn-danger"></a> <a onclick="updateUser(${data},this)" title="Düzenle" class="btn uil-pen fs-6 btn-success"></a>`
                                     }
                                 }
-                                
+
                             ]
                         });
                     },
@@ -60,6 +106,97 @@
                         console.error('Veri çekme hatası:', error);
                     }
                 });
+                $("#btnAdd").click(function () {
+                    $("#modalAdd").modal("show");
+                    $("#modalAdd .form-control").val('');
+                    $("#modalTitle").text("Yeni Kullanıcı Kaydı");
+                    fillUserTypes();
+
+                    $("#btnSave").text("Kaydet").off().click(function () {
+                        let data = {
+                            user: {
+                                email: $("#txtEmail").val(),
+                                password: $("#txtPassword").val(),
+                                customerId: customerId,
+                                userTypeId: $("#ddlUserType").val(),
+
+                            }
+                        };
+
+                        $.ajax({
+                            url: '/User/AddCustomerUser',
+                            type: 'POST',
+                            data: data,
+                            success: function (res) {
+                                if (res.result) {
+                                    $("#modalAdd").modal("hide");
+                                    data.user.id = res.userId;
+                                    DataTable.row.add(data.user).draw();
+                                    toastr.success(res.message);
+                                } else {
+                                    Swal.fire({
+                                        icon: 'error',
+                                        title: 'Hata',
+                                        text: res.message,
+
+
+                                    });
+                                    $("#modalAdd").modal("hide");
+                                }
+
+                            }
+                        });
+                    });
+                });
+                
+                deleteUser = function (userId, button) {
+                    Swal.fire({
+                        title: "Silmek İstediğinize Emin Misiniz?",
+                        text: "Bu işlem geri alınamayacaktır.",
+                        icon: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Evet!",
+                        cancelButtonText: "Hayır!"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            $.ajax({
+                                url: '/User/Delete',
+                                type: 'POST',
+                                data: { id: userId },
+                                success: function () {
+
+                                    let satir = $(button).parent().parent();
+                                    DataTable.row(satir).remove().draw(false);
+                                    toastr.success('Kullanıcı başarıyla silindi.');
+                                },
+                                error: function (err) {
+                                    toastr.error('Kullanıcı silinirken bir hata oluştu: ');
+                                }
+                            });
+
+                         
+
+                        }
+                    });
+
+                };
+                function fillUserTypes() {
+                    $.ajax({
+                        url: '/UserType/GetAll',
+                        type: 'GET',
+                        success: (res) => {
+                            $("#ddlUserType").empty();
+                            $("#ddlUserType").append(new Option("Lütfen seçim yapınız", 0));
+                            for (var item of res.data) {
+                                $("#ddlUserType").append(new Option(item.name, item.id));
+                            }
+
+                        }
+                    });
+                }
+
             }
         });
     </script>
